deleted Nath Book French.pdf and modified .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Latest_Digital_is_the_Cash.epub
 Nathaniel_Book_Final.zip
 Nathaniel_Book_Final
 Digital is the Cash - FRENCH VERSION+.pdf
+Nath Book French.pdf
+Digital is the Cash - FRENCH VERSION+-1
