added german and spanish translations

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Nathaniel_Book_Final
 Digital is the Cash - FRENCH VERSION+.pdf
 Nath Book French.pdf
 Digital is the Cash - FRENCH VERSION+-1
+German-Digital-is-the-Cash.pdf
+Spanish-Digital-is-the-Cash (1).pdf
